--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
 acres==0.5.0
+aiofiles==23.2.1
 aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
 aiosignal==1.4.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anthropic==0.72.1
 anyio==4.11.0
 appdirs==1.4.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
 asttokens==3.0.1
+async-lru==2.0.5
 attrs==25.4.0
 Authlib==1.6.5
+babel==2.17.0
 beartype==0.22.5
+beautifulsoup4==4.13.4
+bleach==6.2.0
 blinker==1.9.0
 cachetools==6.2.2
 certifi==2025.11.12
@@ -18,12 +27,19 @@ charset-normalizer==3.4.4
 ci-info==0.3.0
 click==8.3.0
 cloudpickle==3.1.2
+colorama==0.4.6
+comm==0.2.2
 configobj==5.0.9
 configparser==7.2.0
+contourpy==1.3.2
 cryptography==46.0.3
+cycler==0.12.1
 cyclopts==4.2.3
+dashscope==1.23.2
 dataclasses-json==0.6.7
+debugpy==1.8.14
 decorator==5.2.1
+defusedxml==0.7.1
 diskcache==5.6.3
 distro==1.9.0
 dnspython==2.8.0
@@ -32,47 +48,76 @@ docutils==0.22.3
 docx==0.2.4
 email-validator==2.3.0
 etelemetry==0.3.1
+eval_type_backport==0.2.2
 exceptiongroup==1.3.0
 executing==2.2.1
 faiss-cpu==1.13.2
 fakeredis==2.33.0
 fastapi==0.128.0
+fastjsonschema==2.21.1
 fastmcp==2.14.0
+ffmpy==0.5.0
 filelock==3.20.0
 firecrawl==4.12.0
 Flask==3.1.2
+fonttools==4.57.0
+fqdn==1.5.1
 frozenlist==1.8.0
+fsspec==2025.3.2
+gradio==5.23.1
+gradio_client==1.8.0
 greenlet==3.2.4
+groovy==0.1.2
 h11==0.16.0
 httpcore==1.0.9
 httplib2==0.31.0
 httptools==0.7.1
 httpx==0.28.1
 httpx-sse==0.4.3
+huggingface-hub==0.30.2
 idna==3.11
 importlib_metadata==8.7.1
+ipykernel==6.29.5
 ipython==9.9.0
 ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.7
+isoduration==20.11.0
 itsdangerous==2.2.0
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.3.0
 jedi==0.19.2
+jieba==0.42.1
 Jinja2==3.1.6
 jiter==0.12.0
+json5==0.12.0
+jsonlines==4.0.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-path==0.3.4
 jsonschema-specifications==2025.9.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.15.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.1
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.15
 keyring==25.6.0
+kiwisolver==1.4.8
 langchain==1.0.5
 langchain-anthropic==1.0.3
 langchain-classic==1.0.0
 langchain-community==0.4.1
-langchain-core==1.0.4
+langchain-core==1.2.7
 langchain-mcp-adapters==0.1.13
-langchain-openai==1.0.2
+langchain-openai==1.1.7
 langchain-text-splitters==1.0.0
 langgraph==1.0.3
 langgraph-checkpoint==3.0.1
@@ -85,18 +130,28 @@ lxml==6.0.2
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 marshmallow==3.26.1
+matplotlib==3.10.1
 matplotlib-inline==0.2.1
 mcp==1.25.0
+mcp-server-time==0.6.2
 mdurl==0.1.2
+mistune==3.1.3
+modelscope_studio==1.1.7
 more-itertools==10.8.0
+mpmath==1.3.0
 multidict==6.7.0
 mypy_extensions==1.1.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.6
 nibabel==5.3.2
 nipype==1.10.0
+notebook==7.4.1
+notebook_shim==0.2.4
 numpy==2.3.4
-openai==2.8.0
+openai==2.16.0
 openapi-pydantic==0.5.1
 opentelemetry-api==1.39.1
 opentelemetry-exporter-prometheus==0.60b1
@@ -105,8 +160,10 @@ opentelemetry-sdk==1.39.1
 opentelemetry-semantic-conventions==0.60b1
 orjson==3.11.4
 ormsgpack==1.12.0
+overrides==7.7.0
 packaging==25.0
 pandas==2.3.3
+pandocfilters==1.5.1
 parso==0.8.5
 pathable==0.4.4
 pathlib==1.0.1
@@ -120,6 +177,7 @@ prometheus_client==0.24.0
 prompt_toolkit==3.0.52
 propcache==0.4.1
 prov==2.1.1
+psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 puremagic==1.30
@@ -131,6 +189,7 @@ pydantic-settings==2.12.0
 pydantic_core==2.41.5
 pydocket==0.16.6
 pydot==4.0.1
+pydub==0.25.1
 pyee==11.1.1
 Pygments==2.19.2
 PyJWT==2.10.1
@@ -146,9 +205,16 @@ python-dotenv==1.2.1
 python-json-logger==4.0.0
 python-louvain==0.16
 python-multipart==0.0.20
+python-pptx==1.0.2
 pytz==2025.2
+pywin32==310
+pywin32-ctypes==0.2.3
+pywinpty==2.0.15
 pyxnat==1.6.4
 PyYAML==6.0.3
+pyzmq==26.4.0
+qwen-agent==0.0.21
+rank-bm25==0.2.2
 rdflib==7.4.0
 redis==7.1.0
 referencing==0.36.2
@@ -156,40 +222,63 @@ regex==2025.11.3
 reportlab==4.4.5
 requests==2.32.5
 requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 rich==14.2.0
 rich-rst==1.3.2
 rpds-py==0.28.0
+ruff==0.11.8
+safehttpx==0.1.6
 scipy==1.16.3
+seaborn==0.13.2
+semantic-version==2.10.0
+Send2Trash==1.8.3
 setuptools==78.1.1
 shellingham==1.5.4
 simplejson==3.20.2
 six==1.17.0
 sniffio==1.3.1
+snowballstemmer==2.2.0
 sortedcontainers==2.4.0
+soupsieve==2.7
 SQLAlchemy==2.0.44
 sse-starlette==3.0.3
 stack-data==0.6.3
 starlette==0.50.0
+sympy==1.14.0
+tabulate==0.9.0
 tavily-python==0.7.17
 tenacity==9.1.2
+terminado==0.18.1
 tiktoken==0.12.0
+tinycss2==1.4.0
+tomlkit==0.13.2
+tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
 traits==7.0.2
 typer==0.21.1
+types-python-dateutil==2.9.0.20241206
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
+uri-template==1.3.0
 urllib3==1.26.20
+uuid_utils==0.14.0
 uv==0.9.22
 uvicorn==0.40.0
 watchfiles==1.1.1
 wcwidth==0.2.14
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
 websockets==16.0
 Werkzeug==3.1.5
-wheel==0.45.1
+wheel==0.46.3
+widgetsnbextension==4.0.14
 wrapt==1.17.3
+XlsxWriter==3.2.3
 xxhash==3.6.0
 yarl==1.22.0
 zipp==3.23.0
